[Migration] Finish migration with appropriate map styling and click handling